# ForgetFlow

./: .gitignore  CLAIM_DETECTION_RESULTS.md  FUTURE_WORK.md  IMPLEMENTATION_STATUS.md  PRE_ITERATION4_REQUIREMENTS_STATUS.md  REMAINING_WORK_ROADMAP.md  REPAIR_BASELINE.md  environment.yml  litellm_config.template.yaml  pyproject.toml
.github/workflows/: ci.yml  test.yml
doc/: METRICS.md  README.md  REPRODUCIBILITY.md  SINGLE_TARGET_TEST_COVERAGE.md  changelog.md  implementation.md  results.md
experiments/trustparadox_u/: agent.py  aggregate.py  assertion_contracts.py  attacks.py  audit_results.py  candidates.py  chat_provider.py  config.py  dataset.py  embedding.py  embedding_preflight.py  evaluator.py  generate_matrix.py  identity.py  information_theory.py  manifest.py  p0_candidates.py  p0_validation.py  p1_evaluation.py  p2_experiments.py  paths.py  preflight.py  providers.py  run_pilot.py  run_real_llm_smoke.py  runner.py  serialization.py
marble/: __init__.py
marble/agent/: base_agent.py
marble/firewall/: __init__.py  audit.py  audit_validation.py  claims.py  contamination.py  detectors.py  flow_gate.py  history.py  normalization.py  policy.py  registry.py  types.py
results/assertion_suite/: assertion_suite_report.json
results/single_target_smoke/: episodes.jsonl  metric_counts.json  metric_counts_by_condition.json  metrics.json  metrics_by_condition.json  result_audit.json  (+9 more)
scripts/: check_source_integrity.py  run_assertion_suite.py  run_multi_target_smoke.py  run_single_target_smoke.py  validate_workflows.py
tests/: test_architecture_contract.py
(+143 files in other folders)
