[tool.poetry]
name = "forgetflow"
version = "0.1.0"
description = "ForgetFlow: A communication firewall for enforcing forgetting in LLM multi-agent systems"
authors = ["ForgetFlow Team"]
package-mode = false
packages = [
    { include = "marble" },
    { include = "experiments" },
]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
jsonschema = "^4.20.0"
litellm = {version = ">=1.40.0", optional = true}

[tool.poetry.extras]
experiment = ["litellm"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.7.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "litellm.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = [
    "integration: requires external service credentials",
]
